# ResolveOps

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
services/agent-api/: alembic.ini  pyproject.toml
services/agent-api/migrations/: env.py
services/agent-api/migrations/versions/: 0001_initial_foundation.py  0002_run_execution_lease_token.py  0003_action_proposal_immutability.py  0004_exactly_once_account_credit.py
services/agent-api/src/resolveops/: __init__.py  local_dev.py  synthetic_data.py
services/agent-api/src/resolveops/api/: app.py  runs.py
services/agent-api/src/resolveops/db/: __init__.py  checkpoints.py
services/agent-api/src/resolveops/graph/: __init__.py  duplicate_charge.py  state.py
services/agent-api/src/resolveops/models/: __init__.py  contract_generation.py  contracts.py  gateway.py  run_api.py
services/agent-api/src/resolveops/policies/: __init__.py  duplicate_charge.py
services/agent-api/src/resolveops/prompts/: __init__.py  registry.py
services/agent-api/src/resolveops/repositories/: __init__.py  runs.py
services/agent-api/src/resolveops/storage/: __init__.py  artifacts.py
services/agent-api/src/resolveops/tools/: __init__.py  (+4 more)
services/agent-api/tests/: test_artifact_storage.py  test_contract_generation.py  test_contracts.py  test_duplicate_charge_graph.py  test_local_dev.py  test_migrations.py  test_model_gateway.py  test_package.py  test_read_only_tools.py  test_run_shell.py  test_synthetic_api_tools.py  test_synthetic_data.py
(+61 files in other folders)
