[project]
name = "resolveops-agent-api"
version = "0.0.0"
description = "ResolveOps agent API package boundary"
requires-python = "==3.12.*"
dependencies = []

[dependency-groups]
dev = [
  "mypy==1.18.2",
  "pytest==8.4.2",
  "ruff==0.14.0",
]

[tool.uv]
package = false
required-version = "==0.11.31"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "-q -s"
testpaths = ["tests"]
pythonpath = ["src"]
