[project]
name = "resolveops-agent-api"
version = "0.0.0"
description = "ResolveOps agent API package boundary"
requires-python = "==3.12.*"
dependencies = [
    "alembic==1.18.4",
    "fastapi==0.116.1",
    "psycopg[binary]==3.3.2",
    "pydantic==2.12.5",
    "sqlalchemy==2.0.46",
]

[dependency-groups]
dev = [
  "faker==37.12.0",
  "httpx==0.28.1",
  "mypy==1.18.2",
  "pytest==8.4.2",
  "ruff==0.14.0",
  "uvicorn==0.35.0",
]

[tool.uv]
package = false
required-version = "==0.11.31"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "-q -s"
testpaths = ["tests"]
pythonpath = ["src"]
